infra/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redis
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      protocol: TCP
